Version 2.02.62 -
====================================
  Remove lvs_in_vg_activated_by_uuid_only call.
  Run device info query device by uuid only.
  Don't touch /dev in vgmknodes if activation is disabled.
  Update lvm2app.h Doxygen comments and add lvm2app Doxygen config file.
  Update nightly tests and lvm2app unit tests to cover tags.
  Add lvm2app functions lvm_{vg|lv}_{get|add|remove}_tag() functions.
  Add dm_pool_strdup to allocate and copy memory in tag library function.
  Refactor vgcreate, vgchange, and lvchange for tag library function.
  Refactor snapshot-merge deptree and device removal to support info-by-uuid.

Version 2.02.61 - 15th February 2010
====================================
  Fix some consts and floating point gcc warnings.
  Fix dm_report_field_uint64 function to accept 64-bit ints.
  Change readhead display to use 32-bit -1 const instead of 64-bit.
  Add LVM_SUPPRESS_LOCKING_FAILURE_MESSAGES environment variable.
  Remove hard-coding that skipped _mimage devices from 11-dm-lvm.rules.
  Use udev transactions in test suite.
  Set udev state automatically instead of using LVM_UDEV_DISABLE_CHECKING.
  Add lvm_pv_get_size, lvm_pv_get_free and lvm_pv_get_dev_size to lvm2app.
  Change lvm2app to return all sizes in bytes as documented (not sectors).
  Add 'fail_if_percent_unsupported' arg to _percent and _percent_run.
  Remove false "failed to find tree node" error when activating merging origin.
  Exit with success when lvconvert --repair --use-policies performs no action.
  Accept a list of LVs with 'lvconvert --merge @tag' using process_each_lv.
  Avoid unnecessary second resync when adding mimage to core-logged mirror.
  Exclude internal VG names and uuids from lists returned through lvm2app.
  Add %ORIGIN support to lv{create,extend,reduce,resize} --extents.
  Add _mda_copy to clone a struct metadata_area.
  Remove pointless versioned symlinks to dmeventd plugin libraries.
  Fix dmeventd snapshot plugin build dependency.