@@ -1,5 +1,6 @@
 Version 2.02.62 -
 ====================================
+  Rewrite clvmd init script.
   Remove lvs_in_vg_activated_by_uuid_only call.
   Run device info query device by uuid only.
   Don't touch /dev in vgmknodes if activation is disabled.
